--- a/index.css
+++ b/index.css
@@ -1,4 +1,19 @@
-html, body {
+html,
+body {
     margin: 5px;
     padding: 0;
+}
+
+.col {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: rgba(86, 61, 124, .15);
+    border: 1px solid rgba(86, 61, 124, .2);
+}
+
+.container {
+    padding: 15px;
+    margin-bottom: 30px;
+    background-color: rgba(0, 123, 255, .15);
+    border: 1px solid rgba(0, 123, 255, .2);
 }
